kubernetes/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: devsu-devops-technical-test-nodejs-ingress
    annotations:
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
        alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
    ingressClassName: alb
    rules:
        - http:
              paths:
                  - path: /api/
                    pathType: Prefix
                    backend:
                        service:
                            name: devsu-devops-technical-test-nodejs-service
                            port:
                                number: 80
        - http:
              paths:
                  - path: /health
                    pathType: Prefix
                    backend:
                        service:
                            name: devsu-devops-technical-test-nodejs-service
                            port:
                                number: 80
